fixed layout shift

--- a/styles/mtb.css
+++ b/styles/mtb.css
@@ -166,6 +166,7 @@ h2 {
     grid-template-columns: 1fr;
     gap: 20px;
     max-width: 1200px;
+    min-height: 600px;
     margin: 0 auto;
 }
 
@@ -176,7 +177,7 @@ h2 {
     border: .5rem solid var(--border-color);
     border-radius: 8px;
     object-fit: cover;
-    aspect-ratio: 450 / 600;
+    aspect-ratio: 3 / 4;
 }
 
 figure {
